# mpk_mix

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
3p/: CMakeLists.txt
cmake/: mpkmix_deps.cmake
include/mpk/mix/: enum_flags.hpp  func_ref.hpp  log.hpp  macro.hpp  meta.hpp  signature.hpp  signature_fwd.hpp  strong.hpp  struct_type.hpp  struct_type_macro.hpp  types.hpp  util.hpp
include/mpk/mix/detail/: format.hpp  set_like.hpp
include/mpk/mix/func_ref/: func_ref.hpp  fwd.hpp  tags.hpp
include/mpk/mix/log/: defs.hpp  enum.hpp  fixed_length_string.hpp  format_streamable_macro.hpp  level.hpp  pickle_codec_macro.hpp  streamable_macro.hpp  strong.hpp  trivial_codec_macro.hpp
include/mpk/mix/meta/: const.hpp  enum_type.hpp  func.hpp  nil.hpp  type.hpp  type_pack.hpp  zero.hpp
include/mpk/mix/serial/: parse_simple_value.hpp  path.hpp  type_name.hpp
include/mpk/mix/serial/concepts/: map_like.hpp
include/mpk/mix/serial/detail/: type_value_field_names.hpp
include/mpk/mix/serial/json/: from_file.hpp  parse.hpp  to_json.hpp
include/mpk/mix/serial/yaml/: parse.hpp  parse_value.hpp  to_yaml.hpp
include/mpk/mix/strong/: fwd.hpp  grouped.hpp  math.hpp  span.hpp  strong.hpp  vector.hpp
include/mpk/mix/testing/: expect_throw_text.hpp
include/mpk/mix/types/: byte_buf.hpp  byte_buf_fwd.hpp  byte_span.hpp  capped_vec.hpp  fixed_length_string.hpp
include/mpk/mix/util/: any_of.hpp  binomial.hpp  castable_to_bytes.hpp  checkpoint.hpp  chrono_timepoint.hpp  command_line_args.hpp  const_name_span.hpp  const_span.hpp  cxx_type_name.hpp  defer.hpp  downcaster.hpp  env.hpp  exception_message.hpp  fast_pimpl.hpp  format_dynamic.hpp  format_enum.hpp  format_sep.hpp  format_seq.hpp  format_streamable.hpp  holder.hpp  impl_tag.hpp  index_range.hpp  index_set.hpp  install_crash_handlers.hpp  linked_list.hpp  maybe_const.hpp  mutability.hpp  optional.hpp  overloads.hpp  pow2.hpp  resource_list.hpp  ring_buffer.hpp  scoped_inc.hpp  scratch_dir.hpp  signal_handler.hpp  stacktrace.hpp  storable_type.hpp  subscribers.hpp  throw.hpp  time_point.hpp  (+6 more)
include/mpk/mix/util/detail/: hash.hpp  index_like.hpp  read_write_bytes.hpp
include/mpk/mix/value/: object_registry.hpp  parse_simple_value.hpp  type.hpp  type_fwd.hpp  value.hpp  value_fwd.hpp  value_path.hpp  value_registry.hpp
include/mpk/mix/value/detail/: value_component_access.hpp
include/mpk/mix/wrap_c/: check_c_call.hpp  fd.hpp  get_ipv4_addr_of.hpp  host_addr.hpp  io.hpp  sock_addr.hpp  socket.hpp  wrap_c.hpp  zero_filled.hpp
src/serial/: parse_simple_value.cpp  path.cpp
src/serial/json/: from_file.cpp  parse.cpp
src/serial/yaml/: parse.cpp  parse_value.cpp  to_yaml.cpp
src/util/: command_line_args.cpp  install_crash_handlers.cpp  scratch_dir.cpp  signal_handler.cpp  stacktrace.cpp  time_point.cpp
src/value/: parse_simple_value.cpp  type.cpp  value.cpp  value_path.cpp
src/wrap_c/: check_c_call.cpp  fd.cpp  get_ipv4_addr_of.cpp  host_addr.cpp  io.cpp  sock_addr.cpp  socket.cpp
test/: CMakeLists.txt  test_enum_flags.cpp  test_func_ref.cpp  test_macro.cpp  test_meta.cpp  test_serial.cpp  test_strong.cpp  test_struct_type.cpp  test_types.cpp  test_util.cpp  test_util_compiled.cpp  test_value.cpp  test_wrap_c.cpp  test_yaml_parse_value.cpp
